--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+springdoc.api-docs.path=/docs
+springdoc.swagger-ui.path=/docs.html
+springdoc.swagger-ui.operationsSorter=method
+
 server.servlet.context-path=/api
 spring.mvc.date-format=yyyy-MM-dd
 
