Removed the web server, and updated the README for the CLI.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-springdoc.api-docs.path=/docs
-springdoc.swagger-ui.path=/docs.html
-springdoc.swagger-ui.operationsSorter=method
-
-server.servlet.context-path=/api
-spring.mvc.date-format=yyyy-MM-dd
-
-server.error.include-message=always
-server.error.include-binding-errors=always
-server.error.include-stacktrace=on_param
-server.error.include-exception=true
+spring.main.web-application-type=none
